# gui

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  ROADMAP.md  compile_commands.json
AppKit-Extensions-Library/: AppKit-Extensions  AppKit-Extensions-Old  AppKit_Extensions-Swift.h
AppKit-Extensions/AppKit-Extensions/AppKit-Extensions/: AppKitExtensions.swift
AppKit-Extensions/AppKit-Extensions/AppKit-Extensions.xcodeproj/: project.pbxproj
AppKit-Extensions/AppKit-Extensions/AppKit-Extensions.xcodeproj/project.xcworkspace/xcuserdata/treja.xcuserdatad/: UserInterfaceState.xcuserstate
MTK-Extensions-Library/: MTK-Extensions  MTK-Extensions_Old  MTK_Extensions-Swift.h
MTK-Extensions/MTK-Extensions/: MTKTextures.swift
MTK-Extensions/MTK-Extensions.xcodeproj/: project.pbxproj
MTK-Extensions/MTK-Extensions.xcodeproj/project.xcworkspace/xcuserdata/treja.xcuserdatad/: UserInterfaceState.xcuserstate
apple-extensions/: CMakeLists.txt
apple-extensions/AppKit/AppKit-Extensions.xcodeproj/: project.pbxproj
apple-extensions/AppKit/AppKit-Extensions.xcodeproj/xcuserdata/treja.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
apple-extensions/MTK/MTK-Extensions.xcodeproj/: project.pbxproj
apple-extensions/MTK/MTK-Extensions.xcodeproj/xcshareddata/xcschemes/: MTK-Extensions-Library.xcscheme
apple-extensions/MTK/Sources/: MTKTextures.swift
atomization_prototype/: main.cpp
font-rendeirng/font-rendeirng/: bezier.cpp  bezier.hpp  main.cpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
font-rendeirng/font-rendeirng.xcodeproj/project.xcworkspace/xcuserdata/treja.xcuserdatad/: UserInterfaceState.xcuserstate
font-rendeirng/font-rendeirng.xcodeproj/xcuserdata/treja.xcuserdatad/xcschemes/: xcschememanagement.plist
font-rendeirng/font-rendering/: bezier.cpp  bezier.hpp  freetype.hpp  renderFace.cpp  renderFace.hpp  renderer.cpp  renderer.hpp  window.cpp
font-rendeirng/font-rendering.xcodeproj/: project.pbxproj
font-rendeirng/font-rendering.xcodeproj/project.xcworkspace/xcuserdata/treja.xcuserdatad/: UserInterfaceState.xcuserstate
font-rendeirng/font-rendering.xcodeproj/xcuserdata/treja.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
font-rendeirng/font-rendering.xcodeproj/xcuserdata/treja.xcuserdatad/xcschemes/: xcschememanagement.plist
font-rendering/font-rendering/: bezier.cpp  bezier.hpp  freetype.hpp  inputState.cpp  inputState.hpp  processContours.cpp  processContours.hpp  renderFace.cpp  renderFace.hpp  renderer.cpp  renderer.hpp  shaders.metal  text.cpp  text.hpp  window.cpp  window.hpp  windowConstants.hpp
font-rendering/font-rendering.xcodeproj/: project.pbxproj
font-rendering/font-rendering.xcodeproj/project.xcworkspace/xcuserdata/treja.xcuserdatad/: UserInterfaceState.xcuserstate
font-rendering/font-rendering.xcodeproj/xcshareddata/xcschemes/: font-rendering.xcscheme
font-rendering/font-rendering.xcodeproj/xcuserdata/treja.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
font-rendering/font-rendering.xcodeproj/xcuserdata/treja.xcuserdatad/xcschemes/: xcschememanagement.plist
gui/: CLAUDE.md  glyphCache.hpp  ship.sh
gui.xcodeproj/: project.pbxproj
gui.xcodeproj/xcshareddata/xcschemes/: gui.xcscheme
gui/gui/: AppKit_Extensions.hpp  MTKTexture_loader.hpp  bounds.hpp  buffer_allocator.cpp  buffer_allocator.hpp  buffer_helpers.cpp  buffer_helpers.hpp  color.cpp  color.hpp  common.metal  context_manager.cpp  context_manager.hpp  div.cpp  div.hpp  div_shaders.metal  drawable.hpp  element.cpp  element.hpp  events.hpp  flex.cpp  flex.hpp  fragment_types.hpp  frame_buffered_buffer.hpp  frame_info.hpp  glyphCache.cpp  glyphCache.hpp  glyphs.cpp  glyphs.hpp  grid.cpp  grid.hpp  hash_combine.hpp  image.cpp  image.hpp  image_drawable.cpp  image_drawable.hpp  image_shaders.metal  index.cpp  index.hpp  inputState.cpp  inputState.hpp  (+36 more)
gui/gui.xcodeproj/: project.pbxproj
gui/gui.xcodeproj/project.xcworkspace/xcuserdata/treja.xcuserdatad/: UserInterfaceState.xcuserstate
gui/gui.xcodeproj/xcuserdata/treja.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
gui/gui.xcodeproj/xcuserdata/treja.xcuserdatad/xcschemes/: xcschememanagement.plist
gui/gui/Color/: color.cpp  color.hpp
gui/gui/Debug/: printers.hpp
gui/gui/Fragment/: fragment.cpp  fragment.hpp
gui/gui/Image/: image_drawable.cpp  image_drawable.hpp  image_shaders.metal
gui/gui/MTKTextureWrapper/: MTKTexture_loader.cpp  MTKTexture_loader.hpp
gui/gui/NodeBuilder/: node_builder.cpp  node_builder.hpp
gui/gui/Positioning/: LayoutBox.cpp  LayoutBox.hpp
gui/gui/RenderTree/: events.hpp  layout.cpp  layout.hpp  layout_box.cpp  layout_box.hpp  render_tree.cpp  render_tree.hpp  render_tree_helpers.hpp
gui/gui/RootDrawable/: root_drawable.cpp  root_drawable.hpp
gui/gui/Shell/: shell.cpp  shell.hpp  shell_shaders.metal  to_ndc.metal
gui/gui/Text/: glyphCache.cpp  processContours.cpp  processContours.hpp  process_contours.cpp  process_contours.hpp  text.cpp  text.hpp  text_shaders.metal
scripts/: ship.sh
src/: CMakeLists.txt  MTKTexture_loader.cpp  MTKTexture_loader.hpp  MTK_Extensions.hpp  bidi.cpp  bidi.hpp  buffer_allocator.cpp  buffer_allocator.hpp  common.metal  context_manager.cpp  div.hpp  div_shaders.metal  element.cpp  element.hpp  events.hpp  flex.cpp  flex.hpp  fonts.hpp  fragment_types.hpp  frame_buffered_buffer.hpp  frame_info.hpp  freetype.hpp  glyphCache.cpp  glyphCache.hpp  glyphs.cpp  glyphs.hpp  grid.cpp  grid.hpp  image.cpp  image.hpp  index.cpp  index.hpp  inspector.cpp  inspector.hpp  instrumentation.cpp  instrumentation.hpp  main.cpp  new_arch.cpp  new_arch.hpp  node_builder.cpp  (+23 more)
tests/: CMakeLists.txt  bidi.cpp
(+3 files in other folders)
